# BudModelCatalog-SDK

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
example/: fetch_catalog.py
scripts/: compare_catalogs.py
src/bud_model_catalog/: __init__.py  client.py  config.py  exceptions.py  mappings.py  merger.py  models.py
src/bud_model_catalog/sources/: __init__.py  ai_models.py  base.py  litellm.py
tests/: conftest.py  test_ai_models_source.py  test_client.py  test_config.py  test_litellm_source.py  test_merger.py
